--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is where I save all code samples from my YouTube tutorials. Each sub-directory is a single tutorial.
+### This is where I save all code samples from my YouTube tutorials. Each sub-directory is a single tutorial.
 
 
-Visit my channel at https://frankdu.co/youtube
+### Visit my channel at https://frankdu.co/youtube
